# guided-modality-adapter

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
configs/: data.yaml  model.yaml
docker/: DOCKERFILE
scripts/: download.py
src/guided_modality_adapter/app/: ui.py
src/guided_modality_adapter/configs/: model.yaml
src/guided_modality_adapter/model/: embedding.py  llm.py  model.py  projectors.py  whisper.py
src/guided_modality_adapter/model/components/: attn.py  ffn.py  qformer.py
src/guided_modality_adapter/model/utils/: audio.py  extend_tokenizer.py  interpolate.py
src/guided_modality_adapter/services/: transcription.py
src/guided_modality_adapter/training/: data.py  module.py
tests/: test_embedding.py  test_whisper_encoder.py
