[project]
name = "guided-modality-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "omegaconf>=2.3.0",
    "peft>=0.18.0",
    "pyannote-audio>=4.0.2",
    "torch>=2.8.0",
    "transformers>=4.57.3",
]
